[gd_scene load_steps=10 format=3 uid="uid://fjn1llup8qkp"]

[ext_resource type="Script" path="res://scripts/enemies/weapons/ghost_projectile.gd" id="1_qedw0"]
[ext_resource type="Texture2D" uid="uid://cvrq667s2mgss" path="res://assets/weapons/All_Fire_Bullet_Pixel_16x16_02.png" id="2_d537g"]
[ext_resource type="AudioStream" uid="uid://wf188awqi156" path="res://assets/audio/ghostprojectile.wav" id="3_7jgm8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ogjgu"]
atlas = ExtResource("2_d537g")
region = Rect2(256, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dm8v"]
atlas = ExtResource("2_d537g")
region = Rect2(272, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x477o"]
atlas = ExtResource("2_d537g")
region = Rect2(288, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8s72q"]
atlas = ExtResource("2_d537g")
region = Rect2(304, 64, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_d5k3u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ogjgu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dm8v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x477o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8s72q")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ksgkl"]
radius = 15.0

[node name="GhostProjectile" type="Area2D"]
collision_layer = 32
collision_mask = 4
script = ExtResource("1_qedw0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_d5k3u")
autoplay = "default"
frame_progress = 0.225991

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ksgkl")

[node name="Despawn" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="ShootSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_7jgm8")
autoplay = true
bus = &"SFX"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Despawn" to="." method="_on_despawn_timeout"]
